Fixed some bugs on albums and artist models, added YouTube search and display functionality

--- a/webproj/app/static/content/site.css
+++ b/webproj/app/static/content/site.css
@@ -197,5 +197,10 @@ a:hover {
 }
 
 .text-justify {
-  text-align: justify;
+    text-align: justify;
+}
+
+.modal-content iframe{
+    margin: 0 auto;
+    display: block;
 }
