--- a/webproj/app/templates/layout.html
+++ b/webproj/app/templates/layout.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'content/site.css' %}" />
     <link href="{% static 'fonts/righteous.css' %}" rel="stylesheet">
     <link href="{% static 'fonts/cabin.css' %}" rel="stylesheet">
+    <script src="{% static 'scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'scripts/modernizr-2.6.2.js' %}"></script>
+    <script src="{% static 'scripts/custom.js' %}"></script>
 </head>
 
 <body>
