--- a/webproj/app/templates/searchResult.html
+++ b/webproj/app/templates/searchResult.html
@@ -1,82 +1,98 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="container" style="padding-bottom: 50px;">
-    <br>
-        <div class="row">
-            {% if search and artistSearch|length == 0 and albumSearch|length == 0 %}
-                <div class="container">
-                    <div class="row">
-                        <h1 class="text-center" style="padding-top: 100px;">Sorry, your search got no results.</h1>
-                        <h3 class="text-center" style="padding-bottom: 300px;">Please, try again with other search criteria.</h3>
-                    </div>
-                </div>
-            {% elif search %}
-                <div class="col-md-12">
-                    <h1>Hey! Good news!<br></h1><h2>Here's what we found for "<font style="color: #4cae4c">{{ search }}</font>":</h2>
-                    <div class="container" style="padding-top: 30px;">
+    <section>
+        <div class="container" style="padding-bottom: 50px;">
+        <br>
+            <div class="row">
+                {% if search and artistSearch|length == 0 and albumSearch|length == 0 %}
+                    <div class="container">
                         <div class="row">
+                            <h1 class="text-center" style="padding-top: 100px;">Sorry, your search got no results.</h1>
+                            <h3 class="text-center" style="padding-bottom: 300px;">Please, try again with other search criteria.</h3>
+                        </div>
+                    </div>
+                {% elif search %}
+                    <div class="col-md-12">
+                        <h1>Hey! Good news!<br></h1><h2>Here's what we found for "<font style="color: #4cae4c">{{ search }}</font>":</h2>
+                        <div class="container" style="padding-top: 30px;">
+
                             {% if artistSearch|length != 0 %}
-                                <div class="col-md-6">
+                                <div class="row">
                                     <h2>Artists & Tracks</h2>
                                     {% for artist in artistSearch %}
-                                        <br>
-                                        <div class="row">
-                                            <div class="col-md-3">
-                                                <a href="{% url 'artist' artist=artist.name %}" style="color:black">
-                                                    <img class="img-circle" height="100" width="100" src="{{ artist.image }}">
-                                                </a>
+                                        {% if forloop.counter0|divisibleby:3 %}
+                                            <div class="row" style="padding-top: 25px;">
+                                        {% endif %}
+                                                <div class="col-md-4">
+                                                    <div class="col-md-5 text-center">
+                                                        <a href="{% url 'artist' artist=artist.name %}" style="color:black">
+                                                            <img class="img-circle" height="100" width="100" src="{{ artist.image }}">
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-md-7">
+                                                        <br>
+                                                        <h4>
+                                                            <a href="{% url 'artist' artist=artist.name %}" style="color:black">
+                                                                {{ artist.name }}
+                                                            </a>
+                                                        </h4>
+                                                    </div>
+                                                </div>
+                                        {% if forloop.counter|divisibleby:3 %}
                                             </div>
-                                            <div class="col-md-5">
-                                                <br>
-                                                <a href="{% url 'artist' artist=artist.name %}" style="color:black">
-                                                    <h4>{{ artist.name }}</h4>
-                                                </a>
-                                            </div>
-                                        </div>
+                                        {% endif %}
                                     {% endfor %}
                                     <br>
+                                </div>
                                 </div>
                             {% endif %}
 
                             {% if albumSearch|length != 0 %}
-                                <div class="col-md-6">
+                                <div class="row" style="padding-top: 35px;">
                                     <h2>Albums</h2>
                                     {% for album in albumSearch %}
-                                        <br>
-                                        <div class="row">
-                                            <div class="col-md-3">
-                                                <a href="{% url 'album' artist=album.artist album=album.name %}" style="color:black">
-                                                    <img class="img-rounded" height="100" width="100" src="{{ album.image }}">
-                                                </a>
+                                        {% if forloop.counter0|divisibleby:3 %}
+                                            <div class="row" style="padding-top: 35px;">
+                                        {% endif %}
+                                                <div class="col-md-4">
+                                                    <div class="col-md-5 text-center">
+                                                        <a href="{% url 'album' artist=album.artist album=album.name %}" style="color:black">
+                                                            <img class="img-rounded" height="100" width="100" src="{{ album.image }}">
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-md-7">
+                                                        <br>
+                                                        <h4>
+                                                            <a href="{% url 'album' artist=album.artist album=album.name %}" style="color:black">
+                                                                {{ album.name }}
+                                                            </a>
+                                                        </h4>
+                                                        by
+                                                        <a href="{% url 'artist' artist=album.artist %}" style="font-weight: bold">
+                                                            {{ album.artist }}
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                        {% if forloop.counter|divisibleby:3 %}
                                             </div>
-                                            <div class="col-md-5">
-                                                <br>
-                                                <a href="{% url 'album' artist=album.artist album=album.name %}" style="color:black">
-                                                    <h4>{{ album.name }}</h4>
-                                                </a>
-                                                by
-                                                <a href="{% url 'artist' artist=album.artist %}" style="font-weight: bold">
-                                                    {{ album.artist }}
-                                                </a>
-                                            </div>
-                                        </div>
+                                        {% endif %}
                                     {% endfor %}
                                     <br>
                                 </div>
                             {% endif %}
                         </div>
                     </div>
-                </div>
-            {% else %}
-                <div class="container">
-                    <div class="row">
-                        <h1 class="text-center" style="padding-top: 100px;">Sorry, your search seems to be invalid!</h1>
-                        <h3 class="text-center" style="padding-bottom: 300px;">Try again, please.</h3>
+                {% else %}
+                    <div class="container">
+                        <div class="row">
+                            <h1 class="text-center" style="padding-top: 100px;">Sorry, your search seems to be invalid!</h1>
+                            <h3 class="text-center" style="padding-bottom: 300px;">Try again, please.</h3>
+                        </div>
                     </div>
-                </div>
-            {% endif %}
+                {% endif %}
+            </div>
         </div>
-    </div>
+    </section>
 
 {% endblock %}
